--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,4 +1,8 @@
 appname = BeeMail
-httpport = 1944
+enablehttp = false
+enablehttps = true
+httpsport = 1944
+httpscertfile = "conf/beemail.crt"
+httpskeyfile = "conf/beemail.key"
 runmode = dev
 copyrequestbody = true
