Certificates signing fix

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@
 *.out
 
 *.db
-*.crt
-*.key
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/usage.statistics.xml
@@ -27,3 +25,4 @@
 *.iws
 BeeMail
 /vendor/
+/cryptography/
