--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,7 +3,7 @@ servername = "BeeMail"
 enablehttp = false
 enablehttps = true
 httpsport = 1944
-httpscertfile = "conf/beemail.crt"
-httpskeyfile = "conf/beemail.key"
+httpscertfile = "cryptography/BeeMail.crt"
+httpskeyfile = "cryptography/BeeMail.key"
 runmode = dev
 copyrequestbody = true
