--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/usage.statistics.xml
+.idea/dictionaries
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
